fix: fix button overlapping hamburger menu

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,6 +6,7 @@ nav {
   width: 100%;
   right: $navbar-margin;
   pointer-events: none;
+  z-index: 1;
 
   .desktop-nav {
     position: absolute;
